<resources>
    <string name="app_name">Pokedex</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speed">Speed</string>
    <string name="attack">Attack</string>
    <string name="HP">HP</string>
    <string name="defense">Defense</string>
    <string name="sample_number">20</string>
    <string name="stats">Stats</string>
    <string name="img">Image</string>
</resources>
