<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="18dp"
            android:background="@android:color/holo_red_dark"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/HP" />
            <TextView
                android:id="@+id/field_HP"
                android:gravity="end"
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sample_number" />
        </LinearLayout>
        <LinearLayout
            android:padding="18dp"
            android:background="@android:color/holo_purple"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/speed" />
            <TextView
                android:id="@+id/field_Speed"
                android:gravity="end"
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sample_number" />
        </LinearLayout>
        <LinearLayout
            android:padding="18dp"
            android:background="@android:color/holo_green_dark"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/attack" />
            <TextView
                android:gravity="end"
                android:id="@+id/field_attack"
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sample_number" />
        </LinearLayout>
        <LinearLayout
            android:padding="18dp"
            android:background="@android:color/holo_blue_dark"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/defense" />
            <TextView
                android:gravity="end"
                android:id="@+id/field_defense"
                  
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sample_number" />
        </LinearLayout>



    </LinearLayout>

</FrameLayout>